Engagement gelöscht (soll berechnet werden), Entität Kontingent nimmt die Wochenarbeitszeit auf.

--- a/erica.css
+++ b/erica.css
@@ -12,8 +12,10 @@ body {
 	background-position: 100% 100%;
 	background-repeat: no-repeat;
 	color: rgb(64,64,64);
-	font-family: Georgia,Palatino,'Times New Roman',serif;
-	font-size: small;
+//	font-family: Georgia,Palatino,'Times New Roman',serif;
+	font-family: Verdana,Arial,Helvetica,sans-serif;
+//	font-size: small;
+	font-size: normal;
 	line-height: 1.923em;
 }
 
