KW-Sicht: weiter u. zurück-Blättern im Kalender.

--- a/erica.css
+++ b/erica.css
@@ -14,8 +14,8 @@ body {
 	color: rgb(64,64,64);
 //	font-family: Georgia,Palatino,'Times New Roman',serif;
 	font-family: Verdana,Arial,Helvetica,sans-serif;
-//	font-size: small;
-	font-size: normal;
+	font-size: small;
+//	font-size: normal;
 	line-height: 1.923em;
 }
 
