KW-Plan ins reine gebracht, teilweise mit Symbolen statt Text im Header.

--- a/fcs.css
+++ b/fcs.css
@@ -97,3 +97,4 @@ label, form li span { float: left; width: 9em; padding-right: 1em; }
 /* Klassen */
 /* http://www.ohne-css.gehts-gar.net/0004.php: */
 .img18 { float: left; margin-right: 10px; }
+.img19 { margin-right: 10px; }
