--- a/fcs.css
+++ b/fcs.css
@@ -98,3 +98,43 @@ label, form li span { float: left; width: 9em; padding-right: 1em; }
 /* http://www.ohne-css.gehts-gar.net/0004.php: */
 .img18 { float: left; margin-right: 10px; }
 .img19 { margin-right: 10px; }
+
+/* http://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_button */
+.dropbtn {
+    background-color: white;
+    //color: white;
+    padding: 1px;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 120px;
+    box-shadow: 0px 8px 12px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 8px 8px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
