--- a/fcs.css
+++ b/fcs.css
@@ -1,4 +1,3 @@
-/* A := nach Ben Henick: Das Beste an HTML & CSS, O'Reilly 2010 */
 /* B := Eric A. Meyer: CSS Das umfassende Handbuch, O'Reilly 2007 */
 /* A, Seite 85 */
 html, body {
@@ -12,25 +11,30 @@ body {
 	background-position: 100% 100%;
 	background-repeat: no-repeat;
 	color: rgb(64,64,64);
-//	font-family: Georgia,Palatino,'Times New Roman',serif;
-	font-family: Verdana,Arial,Helvetica,sans-serif;
+	font-family: Georgia,Palatino,'Times New Roman',serif;
 	font-size: small;
-//	font-size: normal;
 	line-height: 1.923em;
 }
+
+/* A, Seite 92 */
+/* overflow: visible sorgt dafür, dass der horizontale Scrollbalken bis zum ***
+ * rechten Rand schieben kann, also nichts abgeschnitten wird               ***/
+#hauptteil { height: 1%; overflow: visible; }
+#hauptteil, #kopfteil, #fussteil { width: 100%; margin: 2%; }
+#haupttext { float: right; width: 80%; }
+#seitenleiste { margin-right: 1%; }
 
 a {
 	font-family: Verdana,Arial,Helvetica,sans-serif;
 	font-size: small;
 }
-/* A, Seite 92 */
-/* overflow: visible sorgt dafür, dass der horizontale Scrollbalken bis zum ***
- * rechten Rand schieben kann, also nichts abgeschnitten wird               ***/
-#hauptteil { height: 1%; overflow: visible; }
-/* width + margin sollen nicht groesser als 100% sein, ansonsten horiz. Scrolling */
-#hauptteil, #kopfteil, #fussteil { width: 96%; margin: 2%; }
-#haupttext { float: right; width: 87%; }
-#seitenleiste { margin-right: 1%; }
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
 
 /* basis elemente */
 table  { margin-left: 1px; border: 1px solid #000; }
@@ -139,3 +143,4 @@ label, form li span { float: left; width: 9em; padding-right: 1em; }
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
+/* A := nach Ben Henick: Das Beste an HTML & CSS, O'Reilly 2010 */
